<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/currentJobButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_or_edit_current_job_details" />

        <Button
            android:id="@+id/jobOfferButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_job_offers" />

        <Button
            android:id="@+id/compareSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjust_the_comparison_settings" />

        <Button
            android:id="@+id/compareOffersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compare_job_offers" />
    </LinearLayout>

</FrameLayout>